--- a/Guitar_effects/Guitar_effects/Guitar_effects.vcxproj.filters
+++ b/Guitar_effects/Guitar_effects/Guitar_effects.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="ring_effect.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="main_loop.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="effect.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ring_effect.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="main_loop.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
