--- a/Guitar_effects/Guitar_effects/Guitar_effects.vcxproj.filters
+++ b/Guitar_effects/Guitar_effects/Guitar_effects.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="file_manager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="effect_manager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="effect.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="file_manager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="effect_manager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
