--- a/Guitar_effects/Guitar_effects/Guitar_effects.vcxproj
+++ b/Guitar_effects/Guitar_effects/Guitar_effects.vcxproj
@@ -123,25 +123,25 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="delay_effect.cpp" />
-    <ClCompile Include="effect_manager.cpp" />
-    <ClCompile Include="file_manager.cpp" />
-    <ClCompile Include="fuzz_effect.cpp" />
+    <ClCompile Include="DelayEffect.cpp" />
+    <ClCompile Include="EffectManager.cpp" />
+    <ClCompile Include="FileManager.cpp" />
+    <ClCompile Include="FuzzEffect.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="main_loop.cpp" />
-    <ClCompile Include="ring_effect.cpp" />
-    <ClCompile Include="wah_wah_effect.cpp" />
+    <ClCompile Include="MainLoop.cpp" />
+    <ClCompile Include="RingEffect.cpp" />
+    <ClCompile Include="WahWahEffect.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="definitions.h" />
-    <ClInclude Include="delay_effect.h" />
-    <ClInclude Include="effect.h" />
-    <ClInclude Include="effect_manager.h" />
-    <ClInclude Include="file_manager.h" />
-    <ClInclude Include="fuzz_effect.h" />
-    <ClInclude Include="main_loop.h" />
-    <ClInclude Include="ring_effect.h" />
-    <ClInclude Include="wah_wah_effect.h" />
+    <ClInclude Include="DelayEffect.h" />
+    <ClInclude Include="Effect.h" />
+    <ClInclude Include="EffectManager.h" />
+    <ClInclude Include="FileManager.h" />
+    <ClInclude Include="FuzzEffect.h" />
+    <ClInclude Include="MainLoop.h" />
+    <ClInclude Include="RingEffect.h" />
+    <ClInclude Include="WahWahEffect.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
